WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151464
B3 should have a story for Ext/Trunc strength reduction
https://bugs.webkit.org/show_bug.cgi?id=151464
Summary
B3 should have a story for Ext/Trunc strength reduction
Filip Pizlo
Reported
2015-11-19 14:15:45 PST
The LLVM shift operations require the shift amount to have the same type as the shift base. The B3 shift operations require the shift amount to be an Int32. DFG concurs with this. But the initial lowering will probably involve pretending the FTLOutput's shift operations still take an LLVM-style shift amount, and then on B3 they will emit a Trunc. That means that we'll want to be able to constant fold Trunc and be able to fold Trunc(ZExt).
Attachments
the patch
(13.95 KB, patch)
2015-11-19 14:56 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-11-19 14:56:11 PST
Created
attachment 265907
[details]
the patch
WebKit Commit Bot
Comment 2
2015-11-19 15:08:27 PST
Attachment 265907
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLB3Output.cpp:133: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-11-19 15:18:38 PST
Comment on
attachment 265907
[details]
the patch r=me
Filip Pizlo
Comment 4
2015-11-19 15:36:13 PST
Landed in
http://trac.webkit.org/changeset/192665
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug